<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".BookAddActivity" android:minWidth="400dp" android:maxWidth="600dp" android:minHeight="1000dp"
        android:maxHeight="1000dp" android:visibility="visible">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <ImageView
                    android:layout_width="305dp"
                    android:layout_height="385dp" app:srcCompat="@color/common_google_signin_btn_text_dark_default"
                    tools:layout_editor_absoluteY="30dp" tools:layout_editor_absoluteX="60dp"
                    android:id="@+id/imageView" android:layout_weight="1" android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp" android:layout_marginBottom="30dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:gravity="top" android:layout_marginBottom="10dp">
                <TextView
                        android:layout_width="283dp"
                        android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_weight="1"
                        android:text="@string/book_title" android:textSize="18sp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/title_field" android:layout_weight="1"
                        android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginBottom="10dp">
                <TextView
                        android:layout_width="283dp"
                        android:layout_height="match_parent" android:id="@+id/textView9" tools:text="Authors"
                        android:textSize="18sp" android:layout_weight="1" android:text="@string/authors"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/author_name"
                        android:textSize="18sp" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1" android:layout_marginBottom="10dp">
                <TextView
                        android:text="@string/publish_date"
                        android:layout_width="283dp"
                        android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"
                        tools:text="Publish date:" android:textSize="18sp"/>
                <TextView
                        android:text="TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/publish_date" android:layout_weight="1"
                        android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginBottom="10dp">
                <TextView
                        android:layout_width="283dp"
                        android:layout_height="wrap_content" android:id="@+id/textView"
                        tools:text="Number of pages:"
                        android:textSize="18sp" android:layout_weight="1"
                        android:ellipsize="none"
                        android:maxLines="100"
                        android:scrollHorizontally="false" android:text="@string/number_of_pages"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/number_of_pages" android:layout_weight="1"
                        android:textSize="18sp" tools:text="@string/lorem_ipsum"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginBottom="10dp">
                <TextView
                        android:layout_width="283dp"
                        android:layout_height="match_parent" android:id="@+id/textView3" tools:text="Publishers:"
                        android:textSize="18sp" android:layout_weight="1" android:text="@string/publishers"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/publishers" android:layout_weight="1"
                        android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginBottom="10dp">
                <TextView
                        android:layout_width="283dp"
                        android:layout_height="match_parent" android:id="@+id/textView4"
                        tools:text="ISBN number:"
                        android:textSize="18sp" android:layout_weight="1" android:text="@string/isbn_number"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/isbn_number" android:layout_weight="1"
                        android:textSize="18sp"/>
            </LinearLayout>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add book"
                    android:id="@+id/add_book"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/book_title"/>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>